Implementación del funcionamiento de login y registro de cuentas, creación de página de error

--- a/css/estilos.css
+++ b/css/estilos.css
@@ -7,6 +7,9 @@
     background-color: hsl( 227deg 98% 59% );
     color: white;
 }
+.completo{
+    height: 100vh;
+}
 .links{
     float: right;
 }
